# noesis_dukemdx

./: CMakeLists.txt
include/: mdx_man.h  pluginshare.h
sources/: dukemdx.cpp  noesisplugin.def
